# sy-automl-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.test  NOTICE  PLAN.md  PROGRESS.md  README.md  THIRD_PARTY_LICENSES.txt  config.py  docker-compose.yml  e2e_stdio.py  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements.txt  server.py
.github/workflows/: docker.yml  lint.yml
scripts/: gen_licenses.py  http_auth_e2e.py
serialization/: __init__.py  dataframe.py  envelope.py
tasks/: __init__.py  manager.py  progress.py  registry.py
tests/: conftest.py  test_auth.py  test_coverage_gaps.py  test_data.py  test_envelope.py  test_model_management.py  test_multimodal.py  test_progress.py  test_serialization.py  test_stdout_threading.py  test_tabular.py  test_tasks.py  test_timeseries.py
tools/: __init__.py  _common.py  auth.py  data.py  model_management.py  multimodal.py  tabular.py  task_status.py  timeseries.py
