[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sy-automl-mcp"
version = "0.4.0"
description = "AutoGluon AutoML exposed as an MCP server for AI assistants"
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
sy-automl-mcp = "server:main"

[tool.setuptools]
py-modules = ["server", "config"]
packages = ["tools", "tasks", "serialization"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

# Test files legitimately place imports after `pytest.importorskip(...)` (the
# heavy AutoGluon import must be skipped on hosts without it). E402 is the
# standard allowance for this pattern.
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
